# pr-review-agent

./: .env.example  .gitignore  Dockerfile.claude-sandbox  README.txt  docker-compose.sandbox.yml  pyproject.toml  sandbox.sh  test_notion_connection.py
.claude-plugins/: installed_plugins.json  known_marketplaces.json
.claude/profiles/: safe-mode.json
context/: PR_REVIEW_AUTOMATION.md  PR_REVIEW_ENGINE_VS_SKILL_DESIGN.md  PR_REVIEW_GUIDE.md  TESTING_GUIDE.md  pr-review-agent-kickoff-context.md
context/pr-review-scripts-example/: pr-review.ts
context/pr-review-scripts-example/pr-review/: checklist-generator.ts  cli-prompts.ts  migration-analyzer.ts  pr-analyzer.ts  test-coverage.ts  types.ts
plans/: phase-1-notion-contextual-pr-tests.md
scripts/: test_notion_connection.py
src/pr_review_agent/: __init__.py  cli.py  config.py
src/pr_review_agent/analyzers/: checklist_generator.py  migration_analyzer.py  pr_analyzer.py  role_detector.py  test_coverage.py
src/pr_review_agent/github/: comment.py  pr_client.py
src/pr_review_agent/graph/: conditions.py  nodes.py  state.py  workflow.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_output.py
tests/test_analyzers/: test_checklist_generator.py  test_migration_analyzer.py  test_pr_analyzer.py  test_role_detector.py  test_test_coverage.py
tests/test_github/: test_pr_client.py
tests/test_graph/: test_nodes.py  test_workflow.py
tests/test_llm/: test_brief_generator.py
tests/test_notion/: test_client.py  test_context_loop.py  test_relevance.py  test_search.py
(+13 files in other folders)
