[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-review-agent"
version = "0.1.0"
description = "AI-driven PR review agent that compares intended vs implemented using Notion context"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
pr-review = "pr_review_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_review_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
